--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&display=swap');
+
 @font-face {
   font-weight: 100 900;
   font-family: InterVariable;
